feat: implement vehicle conversion
